# glexperiment

./: .gitignore  CMakeLists.txt  README.md
assets/: castle.vox
libraries/: shaderloader.h
libraries/glad/: glad.c  glad.h
shaders/: hud_vertex.es.glsl  hud_vertex.glsl  textured_fragment.es.glsl  textured_fragment.glsl  textured_vertex.es.glsl  textured_vertex.glsl  white_fragment.es.glsl  wireframe_vertex.es.glsl  wireframe_vertex.glsl
source/: generators.cpp  generators.hpp  inputs.cpp  inputs.hpp  main.cpp  outputs.cpp  outputs.hpp  tris.cpp  tris.hpp  world.cpp  world.hpp
